--- a/Web.config
+++ b/Web.config
@@ -1,9 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+  <connectionStrings>
+    <add name="CodeLinkerConnectionString" connectionString="Data Source=85.208.20.69,54321;Initial Catalog=CodeLinker;Persist Security Info=True;User ID=sa;Password=Sql#123456789;Pooling=False;Encrypt=True;TrustServerCertificate=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
