Modifcación de fotos y si tienes sesión iniciada, el mismo botón te lleva a tu perfil y no al formulario de login/signup

--- a/Web.config
+++ b/Web.config
@@ -9,6 +9,8 @@
       providerName="System.Data.SqlClient" />
     <add name="CodeLinkerConnectionString1" connectionString="Data Source=85.208.20.69,54321;Initial Catalog=CodeLinker;Persist Security Info=True;User ID=sa;Password=Sql#123456789;Pooling=False;Encrypt=True;Trust Server Certificate=True"
       providerName="System.Data.SqlClient" />
+    <add name="CodeLinkerConnectionString2" connectionString="Data Source=85.208.20.69,54321;Initial Catalog=CodeLinker;Persist Security Info=True;User ID=sa;Password=Sql#123456789;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
