Cambio de foto de perfil, carga de foto de perfil y confirmación de formato de correo

--- a/CodeLinker.csproj
+++ b/CodeLinker.csproj
@@ -121,6 +121,13 @@
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="css\contacto.css" />
+    <Content Include="css\footer.css" />
+    <Content Include="css\global.css" />
+    <Content Include="css\header.css" />
+    <Content Include="css\home.css" />
+    <Content Include="css\login.css" />
+    <Content Include="css\proyectos.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
