Arreglados muchos CSS, añadida carpeta de HTML pendientes para hacer y mejoría en general

--- a/CodeLinker.csproj
+++ b/CodeLinker.csproj
@@ -136,7 +136,7 @@
     <Content Include="Global.asax" />
     <Content Include="SignUp.aspx" />
     <Content Include="Login.aspx" />
-    <Content Include="Proyectos.aspx" />
+    <Content Include="Projects.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -268,12 +268,12 @@
     <Compile Include="Model\ProjectCategory.cs" />
     <Compile Include="Model\ProjectType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Proyectos.aspx.cs">
-      <DependentUpon>Proyectos.aspx</DependentUpon>
+    <Compile Include="Projects.aspx.cs">
+      <DependentUpon>Projects.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="Proyectos.aspx.designer.cs">
-      <DependentUpon>Proyectos.aspx</DependentUpon>
+    <Compile Include="Projects.aspx.designer.cs">
+      <DependentUpon>Projects.aspx</DependentUpon>
     </Compile>
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
