--- a/CodeLinker.csproj
+++ b/CodeLinker.csproj
@@ -123,14 +123,18 @@
     <Content Include="Content\bootstrap.rtl.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="CreateProject.aspx" />
+    <Content Include="css\aprende.css" />
     <Content Include="css\contacto.css" />
+    <Content Include="css\crear-proyecto.css" />
     <Content Include="css\footer.css" />
     <Content Include="css\global.css" />
     <Content Include="css\header.css" />
     <Content Include="css\home.css" />
     <Content Include="css\login.css" />
     <Content Include="css\perfil.css" />
+    <Content Include="css\proyecto.css" />
     <Content Include="css\proyectos.css" />
+    <Content Include="css\sobre-nosotros.css" />
     <Content Include="css\ver-proyecto.css" />
     <Content Include="Default.aspx" />
     <Content Include="favicon.ico" />
