Actualizado el datacontext con lo más actual de la base de datos, corregida la ruta de la imagen de perfil automática y ahora encriptamos la contraseña para guardarla en la BBDD

--- a/CodeLinker.csproj
+++ b/CodeLinker.csproj
@@ -44,13 +44,29 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BCrypt.Net-Next, Version=4.0.3.0, Culture=neutral, PublicKeyToken=1e11be04b6288443, processorArchitecture=MSIL">
+      <HintPath>packages\BCrypt.Net-Next.4.0.3\lib\net48\BCrypt.Net-Next.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
+    </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Runtime.CompilerServices.Unsafe.4.5.3\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
@@ -121,6 +137,21 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.rtl.css" />
     <Content Include="Content\bootstrap.rtl.min.css" />
+    <Content Include="Content\img\AlbertoImage.png" />
+    <Content Include="Content\img\BernatImage.png" />
+    <Content Include="Content\img\DavidImage.png" />
+    <Content Include="Content\img\fondo-1.jpeg" />
+    <Content Include="Content\img\fondo-2.jpeg" />
+    <Content Include="Content\img\fondo-3-cut.jpeg" />
+    <Content Include="Content\img\fondo-3.jpeg" />
+    <Content Include="Content\img\header-logo.png" />
+    <Content Include="Content\img\img-alberto.png" />
+    <Content Include="Content\img\img-bernat.png" />
+    <Content Include="Content\img\img-david.png" />
+    <Content Include="Content\img\img-matteo.png" />
+    <Content Include="Content\img\logo-vertical.png" />
+    <Content Include="Content\img\logo-without-letters.png" />
+    <Content Include="Content\img\MatteoImage.png" />
     <Content Include="Content\Site.css" />
     <Content Include="CreateProject.aspx" />
     <Content Include="css\aprende.css" />
@@ -177,12 +208,12 @@
     <Content Include="Content\bootstrap-grid.rtl.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <Content Include="Perfil.aspx" />
     <Content Include="DBConnection.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>DBConnection.designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Perfil.aspx" />
     <None Include="DBConnection.dbml.layout">
       <DependentUpon>DBConnection.dbml</DependentUpon>
     </None>
