--- a/Web.config
+++ b/Web.config
@@ -13,6 +13,8 @@
       providerName="System.Data.SqlClient" />
     <add name="CodeLinkerConnectionString3" connectionString="Data Source=85.208.20.69,54321;Initial Catalog=CodeLinker;Persist Security Info=True;User ID=sa;Password=Sql#123456789;Pooling=False;Encrypt=True;Trust Server Certificate=True"
       providerName="System.Data.SqlClient" />
+    <add name="CodeLinkerConnectionString4" connectionString="Data Source=85.208.20.69,54321;Initial Catalog=CodeLinker;Persist Security Info=True;User ID=sa;Password=Sql#123456789;Pooling=False;Encrypt=True;Trust Server Certificate=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
