--- a/CodeLinker.csproj
+++ b/CodeLinker.csproj
@@ -120,6 +120,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AboutUs.aspx" />
+    <Content Include="Aprende_FreeCertifications_Csharp.aspx" />
+    <Content Include="Aprende_Github_README.aspx" />
     <Content Include="Contacto.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -262,6 +264,20 @@
     </Compile>
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Aprende_FreeCertifications_Csharp.aspx.cs">
+      <DependentUpon>Aprende_FreeCertifications_Csharp.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Aprende_FreeCertifications_Csharp.aspx.designer.cs">
+      <DependentUpon>Aprende_FreeCertifications_Csharp.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Aprende_Github_README.aspx.cs">
+      <DependentUpon>Aprende_Github_README.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Aprende_Github_README.aspx.designer.cs">
+      <DependentUpon>Aprende_Github_README.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Contacto.aspx.cs">
       <DependentUpon>Contacto.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
